@@ -2,19 +2,22 @@ package com.rs.utilities;
 
 import java.io.File;
 import java.io.IOException;
+import java.lang.reflect.InvocationTargetException;
 import java.math.BigInteger;
 import java.net.URL;
 import java.security.MessageDigest;
 import java.text.DecimalFormat;
+import java.util.ArrayList;
 import java.util.Enumeration;
+import java.util.List;
 
 import com.rs.GameConstants;
 import com.rs.cache.Cache;
 import com.rs.game.map.WorldTile;
 import com.rs.game.player.Player;
+import com.rs.utilities.LogUtility.LogType;
 
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
-import it.unimi.dsi.fastutil.objects.ObjectList;
 import lombok.SneakyThrows;
 import lombok.Synchronized;
 import skills.Skills;
@@ -521,7 +524,7 @@ public final class Utility {
 		}
 
 		else if (GameConstants.DEBUG)
-			Logger.log("Utils", "qc: " + fileId + ", " + (data == null ? 0 : data.length));
+			LogUtility.log(LogType.TRACE, "qc: " + fileId + ", " + (data == null ? 0 : data.length));
 		return data;
 	}
 
@@ -558,15 +561,22 @@ public final class Utility {
 	 * @return The list of classes
 	 */
 	@SneakyThrows({InstantiationException.class, IllegalAccessException.class, ClassNotFoundException.class})
-	public static ObjectList<Object> getClassesInDirectory(String directory) {
-		ObjectList<Object> classes = new ObjectArrayList<>();
-		for (File file : new File("./bin/" + directory.replace(".", "/")).listFiles()) {
+	public static List<Object> getClassesInDirectory(String directory) {
+		List<Object> classes = new ArrayList<>();
+		for (File file : new File("./bin/main/" + directory.replace(".", "/")).listFiles()) {
 			if (file.getName().contains("$")) {
 				continue;
 			}
-			Object objectEvent = (Class.forName(directory + "." + file.getName().replace(".class", ""))
-					.newInstance());
-			classes.add(objectEvent);
+			Object objectEvent;
+			try {
+				objectEvent = (Class.forName(directory + "." + file.getName().replace(".class", ""))
+						.getConstructor().newInstance());
+				classes.add(objectEvent);
+			} catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException
+					| SecurityException e) {
+				e.printStackTrace();
+			}
+			
 		}
 		return classes;
 	}
